--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,58 +1,37 @@
-# Build stage
-FROM python:3.10-slim as builder
-
-WORKDIR /app
-
-# Set environment variables
-ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1 \
-    PIP_NO_CACHE_DIR=1 \
-    PIP_DISABLE_PIP_VERSION_CHECK=1
-
-# Install system dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    gcc \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install Python dependencies
-COPY requirements.txt .
-RUN pip wheel --no-cache-dir --no-deps --wheel-dir /app/wheels -r requirements.txt
-
-# Final stage
 FROM python:3.10-slim
 
 WORKDIR /app
 
-# Set environment variables
-ENV PYTHONPATH=/app \
-    PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1 \
-    PATH="/app/.local/bin:$PATH" \
-    PORT=8000
-
 # Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl \
+    gcc \
+    python3-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Create a non-root user
-RUN useradd -m appuser && chown -R appuser:appuser /app
-USER appuser
-
-# Copy Python wheels from builder
-COPY --from=builder --chown=appuser:appuser /app/wheels /wheels
-COPY --chown=appuser:appuser . .
+# Copy requirements first to leverage Docker cache
+COPY requirements.txt .
 
 # Install Python dependencies
-RUN pip install --user --no-cache-dir /wheels/* && \
-    rm -rf /wheels && \
-    pip install -e .
+RUN pip install --no-cache-dir -r requirements.txt && \
+    pip install --no-cache-dir uvicorn
+
+# Copy application code
+COPY . .
+
+# Install the package in development mode
+RUN pip install -e .
 
 # Create necessary directories
 RUN mkdir -p /app/data
 
+# Use a non-root user
+RUN useradd -m appuser && \
+    chown -R appuser:appuser /app
+
+USER appuser
+
 # Expose the port the app runs on
-EXPOSE $PORT
+EXPOSE 8000
 
 # Command to run the application
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
