--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -37,8 +37,16 @@ ENV/
 # Local development
 .DS_Store
 Thumbs.db
-data/
-!.gitkeep
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+*.db-journal
+
+# Data directory - ignore everything except __init__.py
+data/*
+!data/__init__.py
 
 # Logs
 *.log
@@ -50,35 +58,45 @@ data/
 htmlcov/
 .coverage
 .coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
 .pytest_cache/
+
+# Docker
+.dockerignore
+Dockerfile*
+docker-compose*.yml
 
 # Jupyter Notebook
 .ipynb_checkpoints
 
-# Production
-*.sqlite3
-*.db
+# Local development settings
+local_settings.py
 
-# Temporary files
-*.bak
-*.tmp
-*~
+# Byte-compiled / optimized / DLL files
+*.py[cod]
+*$py.class
 
-# Local development
-.venv/
-
-# Package manager files
-Pipfile
-Pipfile.lock
-poetry.lock
+# C extensions
+*.so
 
 # Distribution / packaging
 .Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# PyInstaller
 *.manifest
 *.spec
 
@@ -99,7 +117,6 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
-cover/
 
 # Translations
 *.mo
@@ -122,7 +139,6 @@ instance/
 docs/_build/
 
 # PyBuilder
-.pybuilder/
 target/
 
 # Jupyter Notebook
@@ -133,23 +149,10 @@ profile_default/
 ipython_config.py
 
 # pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+.python-version
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
+# celery beat schedule file
 celerybeat-schedule
-celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
