--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,22 +4,24 @@ FROM python:3.10-slim
 # Set environment variables
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
-    PIP_NO_CACHE_DIR=1
+    PYTHONPATH=/app/backend:/app
 
 # Create a non-root user and working directory
 RUN useradd -m appuser && \
-    mkdir -p /app && \
-    chown appuser:appuser /app
+    mkdir -p /app/backend && \
+    chown -R appuser:appuser /app
 
 # Set working directory
 WORKDIR /app
 
 # Copy requirements first to leverage Docker cache
-COPY requirements.txt .
+COPY --chown=appuser:appuser requirements.txt .
+COPY --chown=appuser:appuser setup.py .
 
-# Install dependencies as root, then switch to non-root user
+# Install system dependencies and Python packages
 RUN pip install --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+    pip install --no-cache-dir -r requirements.txt && \
+    pip install --no-cache-dir -e .
 
 # Copy the rest of the application
 COPY --chown=appuser:appuser . .
@@ -27,11 +29,8 @@ COPY --chown=appuser:appuser . .
 # Switch to non-root user
 USER appuser
 
-# Install the package in development mode
-RUN pip install --no-cache-dir -e .
-
 # Expose the port the app runs on
 EXPOSE 8000
 
 # Command to run the application
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000"]
