--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,11 +4,11 @@ FROM python:3.10-slim
 # Set environment variables
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
-    PYTHONPATH=/app/backend:/app
+    PYTHONPATH=/app
 
 # Create a non-root user and working directory
 RUN useradd -m appuser && \
-    mkdir -p /app/backend && \
+    mkdir -p /app && \
     chown -R appuser:appuser /app
 
 # Set working directory
@@ -19,9 +19,14 @@ COPY --chown=appuser:appuser requirements.txt .
 COPY --chown=appuser:appuser setup.py .
 
 # Install system dependencies and Python packages
-RUN pip install --upgrade pip && \
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends gcc python3-dev && \
+    pip install --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt && \
-    pip install --no-cache-dir -e .
+    pip install --no-cache-dir -e . && \
+    apt-get remove -y gcc python3-dev && \
+    apt-get autoremove -y && \
+    rm -rf /var/lib/apt/lists/*
 
 # Copy the rest of the application
 COPY --chown=appuser:appuser . .
@@ -33,4 +38,4 @@ USER appuser
 EXPOSE 8000
 
 # Command to run the application
-CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
