--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -13,6 +13,8 @@ services:
         value: 8000
       - key: LOG_LEVEL
         value: info
+      - key: PYTHONPATH
+        value: /opt/render/project/src
       - key: OPENAI_API_KEY
         fromService:
           name: geoscore-secrets
@@ -37,8 +39,8 @@ services:
     resources:
       memory: 512MB
       cpu: 0.5
-    # Explicitly set the command to use
-    command: uvicorn main:app --host 0.0.0.0 --port $PORT
+    # Updated command to use the new app.py entry point
+    command: uvicorn app:app --host 0.0.0.0 --port $PORT --workers 1
 
 # Uncomment and configure if you want to use a managed database
 # databases:
